--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -20,7 +20,9 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mysql-version>8.0.33</mysql-version>
+        <lombok.version>1.18.22</lombok.version>
+        <mysql.version>8.0.33</mysql.version>
+        <springdoc.version>2.4.0</springdoc.version>
     </properties>
 
     <build>
