--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -26,6 +26,7 @@
         <protobuf.version>3.23.4</protobuf.version>
         <protobuf-plugin.version>0.6.1</protobuf-plugin.version>
         <grpc.version>1.58.0</grpc.version>
+        <grpc.server.version>3.1.0.RELEASE</grpc.server.version>
     </properties>
 
     <build>
