--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -3,11 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.helltractor.mall</groupId>
-    <artifactId>parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <name>Imitation Douyin Mall</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -15,20 +10,51 @@
         <version>3.2.0</version>
     </parent>
 
+    <groupId>com.helltractor.mall</groupId>
+    <artifactId>parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>Imitation Douyin Mall</name>
+
     <properties>
         <project.version>1.0-SNAPSHOT</project.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.cloud.version>4.1.0</spring.cloud.version>
-        <spring.grpc.version>3.1.0.RELEASE</spring.grpc.version>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <spring-boot.version>3.2.0</spring-boot.version>
+        <spring-cloud-alibaba.version>2021.0.5.0</spring-cloud-alibaba.version>
+        <spring-cloud.version>4.1.0</spring-cloud.version>
+        <spring-grpc.version>3.1.0.RELEASE</spring-grpc.version>
         <lombok.version>1.18.30</lombok.version>
-        <mysql.version>8.0.33</mysql.version>
+        <mysql.version>8.2.0</mysql.version>
         <springdoc.version>2.4.0</springdoc.version>
         <protobuf.version>3.23.4</protobuf.version>
         <protobuf-plugin.version>0.6.1</protobuf-plugin.version>
         <grpc.version>1.58.0</grpc.version>
+        <casbin.version>1.8.0</casbin.version>
+        <fastjson.version>1.2.76</fastjson.version>
+        <alibaba-csp.version>1.8.8</alibaba-csp.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring-cloud-alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <pluginManagement>
@@ -40,4 +66,5 @@
             </plugins>
         </pluginManagement>
     </build>
+
 </project>
