--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -8,7 +8,6 @@ server:
 spring:
   application:
     name: imitation-douyin-mall
-
   cloud:
     consul:
       discovery:
@@ -16,13 +15,10 @@ spring:
         register: true
         hostname: localhost
         port: 8500
-
     sentinel:
-      block-page: /errorPage
-      enabled: true # 自动化配置是否生效
       eager: true   # 禁用控制台懒加载
       transport:
-        dashboard: localhost:8120 # 控制台地址
+        dashboard: localhost:8858 # 控制台地址
 #      datasource:
 #        ds1:
 #          consul:
@@ -31,10 +27,8 @@ spring:
 #            data-id: flowrule.json
 #            data-type: json
 #            rule-type: flow
-
   profiles:
     active: dev
-
 #  datasource:
 #    druid:
 #      driver-class-name: ${helltractor.datasource.driver-class-name}
@@ -62,7 +56,6 @@ spring:
 springdoc:
   api-docs:
     path: /api-docs
-
   swagger-ui:
     path: /swagger-ui.html
     operations-sorter: method
@@ -71,7 +64,7 @@ management:
   endpoint:
     web:
       exposure:
-        include: "health,info"
+        include: "*"
     health:
       show-details: always
       diskSpace:
