feat: add casbin interceptor

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -65,11 +65,11 @@
             <artifactId>grpc-server-spring-boot-starter</artifactId>
             <version>${spring-grpc.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.casbin</groupId>-->
-<!--            <artifactId>casbin-spring-boot-starter</artifactId>-->
-<!--            <version>${casbin.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.casbin</groupId>
+            <artifactId>casbin-spring-boot-starter</artifactId>
+            <version>${casbin.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
