--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -61,6 +61,9 @@ spring:
 #    configuration:
 #        map-underscore-to-camel-case: true
 
+casbin:
+  storeType: file
+
 springdoc:
   api-docs:
     path: /api-docs
