--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -26,7 +26,8 @@
         <spring-boot.version>3.2.8</spring-boot.version>
         <spring-cloud-alibaba.version>2023.0.1.3</spring-cloud-alibaba.version>
         <spring-cloud.version>2023.0.3</spring-cloud.version>
-        <spring-grpc.version>3.1.0.RELEASE</spring-grpc.version>
+        <grpc-spring.version>3.1.0.RELEASE</grpc-spring.version>
+        <mybatis-spring.version>3.0.3</mybatis-spring.version>
         <lombok.version>1.18.30</lombok.version>
         <mysql.version>8.2.0</mysql.version>
         <springdoc.version>2.4.0</springdoc.version>
