--- a/server/pom.xml
+++ b/server/pom.xml
@@ -41,11 +41,6 @@
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-data-redis</artifactId>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -60,15 +55,21 @@
 <!--            <artifactId>spring-cloud-starter-openfeign</artifactId>-->
 <!--            <version>${spring-cloud.version}</version>-->
 <!--        </dependency>-->
+
         <dependency>
             <groupId>net.devh</groupId>
-            <artifactId>grpc-server-spring-boot-starter</artifactId>
-            <version>${spring-grpc.version}</version>
+            <artifactId>grpc-spring-boot-starter</artifactId>
+            <version>${grpc-spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.casbin</groupId>
             <artifactId>casbin-spring-boot-starter</artifactId>
             <version>${casbin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis-spring.version}</version>
         </dependency>
 
         <dependency>
@@ -107,9 +108,27 @@
             <version>${lombok.version}</version>
         </dependency>
 
+        <!--test dependencies-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter-test</artifactId>
+            <version>${mybatis-spring.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-testing</artifactId>
+            <version>${grpc.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
