--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -33,11 +33,12 @@
         <springdoc.version>2.4.0</springdoc.version>
         <protobuf.version>3.23.4</protobuf.version>
         <protobuf-plugin.version>0.6.1</protobuf-plugin.version>
-        <grpc.version>1.58.0</grpc.version>
+        <grpc.version>1.63.0</grpc.version>
         <casbin.version>1.8.0</casbin.version>
         <fastjson.version>1.2.76</fastjson.version>
         <alibaba-csp.version>1.8.8</alibaba-csp.version>
         <jsonwebtoken.version>0.12.1</jsonwebtoken.version>
+        <mockito.version>5.14.0</mockito.version>
     </properties>
 
     <dependencyManagement>
